removed guava from dependencies